# avone

./: ffmpeg.7z  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/av/show/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/av/show/: MainActivity.java  OpenGlActivity.java  S.java
app/src/main/java/com/av/show/render/: MyRender.java  ShaderUtils.java
app/src/main/java/com/av/show/view/: MySurfaceView.java
app/src/main/res/layout/: activity_main.xml  gl_layout.xml
app/src/main/res/raw/: fragment_shader_imge.glsl  vertex_shader_image.glsl
app/src/main/res/values/: strings.xml
app/src/test/java/com/av/show/: ExampleUnitTest.java
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/androidTest/java/pictrue/com/reiniot/ffmpeg/: ExampleInstrumentedTest.java
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: ffmpeg-lib.cpp
ffmpeg/src/main/java/pictrue/com/reiniot/ffmpeg/: FFmpeg.java
ffmpeg/src/test/java/pictrue/com/reiniot/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
myplayer/: CMakeLists.txt  build.gradle
myplayer/src/androidTest/java/com/av/myplayer/: ExampleInstrumentedTest.java
myplayer/src/main/: AndroidManifest.xml
myplayer/src/main/cpp/: native-lib.cpp
myplayer/src/main/cpp/androidplatform/: JavaListener.cpp  JavaListener.h  MyLog.h
myplayer/src/main/cpp/androidplatform/base/: JavaListener.cpp  JavaListener.h
myplayer/src/main/cpp/androidplatform/callback/: CallJava.cpp  CallJava.h  OnLoadCallBack.cpp  OnLoadCallBack.h  PrepareCallBack.cpp  PrepareCallBack.h  TestErrorCallBack.cpp  TestErrorCallBack.h
myplayer/src/main/cpp/common/: AVPacketQueue.cpp  AVPacketQueue.h  MyAudio.cpp  MyAudio.h  MyFFmpeg.cpp  MyFFmpeg.h  MyOpenslEs.cpp  MyOpenslEs.h  MyVideo.cpp  MyVideo.h  PlayStatus.cpp  PlayStatus.h
myplayer/src/main/java/com/av/myplayer/: Demo.java
myplayer/src/main/java/com/av/myplayer/bean/: TimeInfoBean.java
myplayer/src/main/java/com/av/myplayer/gl/render/: MyRender.java  ShaderUtils.java
myplayer/src/main/java/com/av/myplayer/gl/view/: MySurfaceView.java
myplayer/src/main/java/com/av/myplayer/listener/: OnCompelet.java  OnComplete.java  OnErrorListener.java  OnLoadListener.java  OnPauseResumeListener.java  OnTimeInfoListener.java  PrepareListener.java
myplayer/src/main/java/com/av/myplayer/myLog/: MyLog.java
myplayer/src/main/java/com/av/myplayer/player/: MyPlayer.java
myplayer/src/main/java/com/av/myplayer/utils/: TimeUtils.java  VideoSupportUitl.java
myplayer/src/test/java/com/av/myplayer/: ExampleUnitTest.java
